<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newPaymentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:minWidth="50dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/buttonSinglePayment"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.33"
            android:textSize="6pt"
            android:onClick="buttonClicked"
            android:text="@string/single_payment"/>

        <Button
            android:id="@+id/buttonMultiplePayment"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.33"
            android:textSize="6pt"
            android:onClick="buttonClicked"
            android:text="@string/installment"/>

        <Button
            android:id="@+id/buttonIncome"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.33"
            android:textSize="6pt"
            android:onClick="buttonClicked"
            android:text="@string/income"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="21dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/textPaymentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/paymentName"
            android:inputType="textCapSentences" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/textPaymentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/total_amount"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/textPaymentInstallmentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/number_of_installments"
            android:inputType="number"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/spinnerPaymentMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinnerPaymentYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSavePayment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        style="@style/RedButton"
        android:text="@string/save_payment"
        android:onClick="saveButtonOnClick"/>

    <LinearLayout
        android:id="@+id/tagLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSavePayment"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>