<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newTagLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:minWidth="50dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="21dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/textTagName"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tag_name"
            android:inputType="textCapSentences">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/textTagIconText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/letter_representation"
            android:inputType="textCapCharacters"
            android:maxLength="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tagColorLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSaveTag"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:orientation="vertical"
        android:layout_alignEnd="@+id/buttonSaveTag">
    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveTag"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        style="@style/RedButton"
        android:text="@string/save_tag"
        android:onClick="saveButtonOnClick"/>

    <LinearLayout
        android:id="@+id/tagLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSavePayment"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>