<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/paymentDetailPaymentNameInfo"
        android:layout_toStartOf="@+id/paymentDetailPaymentAmountInfo"
        android:layout_alignParentEnd="true">
        <TextView
            android:id="@+id/paymentDetailPaymentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/paymentDetailPaymentAmountInfo"
        android:layout_below="@+id/paymentDetailPaymentNameInfo">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="11dp"
            android:text="@string/detail_payment_amount"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/paymentDetailPaymentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="11dp"
            android:text=""
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/paymentDetailPaymentDateInfo"
        android:layout_below="@+id/paymentDetailPaymentAmountInfo">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="11dp"
            android:text="@string/payment_date"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/paymentDetailPaymentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="11dp"
            android:text=""
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentDetailPaymentDateInfo">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="11dp"
            android:text="@string/payment_tag"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/paymentDetailPaymentTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="11dp"
            android:text=""
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

</RelativeLayout>
